--- a/src/button.scss
+++ b/src/button.scss
@@ -1,3 +1,9 @@
 .button {
-	background-color: lightcoral;
+	padding: 0.2em;
+	margin: 0.15em;
+	font-size: 0.8em;
+	color: white;
+	border: 0.1em white solid;
+	border-radius: 10%;
+	background-color: #282c34;
 }
