--- a/src/navMenu.scss
+++ b/src/navMenu.scss
@@ -1,12 +1,17 @@
 .nav-menu {
-    display: flex;
-    border-bottom: white .1em solid;
-    background-color: #282c34;
+	display: flex;
+	border-bottom: white 0.1em solid;
+	background-color: #282c34;
 }
 
 .nav-link {
-    color: white;
-    padding-left: 3vmin;
-    font-size: 2em;
-    text-decoration: none;
+	color: white;
+	padding-inline: 1vmin;
+	border-right: white 0.01em solid;
+	font-size: 2em;
+	text-decoration: none;
+
+	&:hover {
+		background-color: #39445a;
+	}
 }
