--- a/src/loginForm.scss
+++ b/src/loginForm.scss
@@ -1,6 +1,36 @@
 .login-form {
-    display: flex;
-    flex-direction: column;
-    width: 50vmin;
-    margin-inline: auto;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	width: 40vmin;
+	margin-inline: auto;
+	border: white 0.01em solid;
+	border-radius: 30px;
+	padding: 0.5em 0 1em 0;
+
+	&__label {
+		padding: 0.5em 0 0.3em 1.5em;
+	}
+
+	&__text-input {
+		height: 2em;
+		width: 75%;
+		margin-inline: auto;
+	}
+
+	&__submit-button {
+		margin-top: 1.2em;
+		padding: 0.3em 2em;
+		align-self: center;
+		font-size: 0.8em;
+		color: white;
+		border: solid white 0.01em;
+		border-radius: 10px;
+		background-color: #383e49;
+
+		&:hover {
+			background-color: #38493b;
+			cursor: pointer;
+		}
+	}
 }
